Configured firebase secrets and update deploy.yml

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Jsuarez",
   "license": "MIT",
   "dependencies": {
+    "firebase": "^12.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.1"
