--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^9.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.0.0",
+    "dotenv-webpack": "^8.1.1",
     "html-webpack-plugin": "^5.0.0",
     "style-loader": "^3.0.0",
     "webpack": "^5.101.3",
