--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "My PWA Project + ML",
   "short_name": "PWA",
-  "start_url": "/pwa_app/",
+  "start_url": "https://josesuarezcordova.github.io/pwa_app/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
