--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Jsuarez",
   "license": "MIT",
   "dependencies": {
+    "@firebase/firestore": "^4.9.2",
     "@tensorflow-models/mobilenet": "^2.1.1",
     "@tensorflow/tfjs": "^4.22.0",
     "firebase": "^12.3.0",
