--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,21 @@
 {
-  "name": "My PWA Project + ML",
-  "short_name": "PWA",
+  "name": "What is this?",
+  "short_name": "What is this?",
+  "icons": [
+    { 
+      "src": "/icons/icon-192x192.png", 
+      "sizes": "192x192", 
+      "type": "image/png" },
+    { 
+      "src": "/icons/icon-512x512.png", 
+      "sizes": "512x512", 
+      "type": "image/png" }
+  ],
   "start_url": ".",
   "scope" : ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "description": "A Progressive Web App designed to gather labeled data for AI training.",
-  "icons": [
-    { "src": "./icons/icon-192x192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "./icons/icon-512x512.png", "sizes": "512x512", "type": "image/png" }
-  ]
+  "theme_color": "#ffffff",
+  "description": "Train your own bot trough images"
+ 
 }
