--- a/manifest.json
+++ b/manifest.json
@@ -3,19 +3,18 @@
   "short_name": "What is this?",
   "icons": [
     { 
-      "src": "/icons/icon-192x192.png", 
+      "src": "icons/icon-192x192.png", 
       "sizes": "192x192", 
       "type": "image/png" },
     { 
-      "src": "/icons/icon-512x512.png", 
+      "src": "icons/icon-512x512.png", 
       "sizes": "512x512", 
       "type": "image/png" }
   ],
-  "start_url": ".",
-  "scope" : ".",
+  "start_url": "./",
+  "scope" : "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "description": "Train your own bot trough images"
- 
 }
